[FIX] website: solve alignment bugs in onboarding
- Fix the position of 'Add to menu' toggle button in new page dialog
- Properly align tip icon in the welcome message

task-1895287

--- a/addons/website/static/src/scss/website.edit_mode.scss
+++ b/addons/website/static/src/scss/website.edit_mode.scss
@@ -180,8 +180,6 @@
     font-family: Roboto, $font-family-sans-serif;
 
     .o_tooltip_container {
-        display: inline-flex;
-        align-items: center;
         transition: opacity 1s linear;
 
         > .o_tooltip {
